2000-02-15  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc: (SuspendJob) print a better status for CopyJobEnv.
	* Speedometer.cc: reduce initial rate period to 2 seconds.

2000-02-14  Alexander V. Lukyanov  <lav@yars.free.net>

	* ftpclass.cc: close data socket when switching to no-rest mode.
	* HttpDir.cc: strip quotes from refresh URL.

2000-02-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, GetPass.cc, Job.cc, LsCache.cc, MirrorJob.cc, ResMgr.cc,
	  alias.cc, commands.cc, complete.cc, lftp.cc, netrc.cc, parsecmd.cc,
	  pgetJob.cc:
	  call xfree everywhere.
	* Filter.cc: use xfree and xgetcwd.
	* Resolver.cc: don't dup2 to fd 1.
	* SMTask.cc: add task_count and debug.
	* SleepJob.cc: use TimeoutS.
	* ftpclass.cc, ftpclass.h: add FreeResult method.
	* misc.cc: (xgetcwd) call xmalloc_register_block.
	* xmalloc.cc, xmalloc.h: count memory blocks;
	  add xmalloc_register_block.
	* NetAccess.cc: workaround gcc bug, this fixes mem leak.
	* buffer.cc: clean up gotos.
	* lftp.cc, lftp_rl.c, lftp_rl.h: readline result must be freed;
	  register it with xmalloc_register_block.

2000-02-12  Alexander V. Lukyanov  <lav@yars.free.net>

	* FileCopy.cc: fix memory leaks.
	* LsCache.cc: use xfree.
	* commands.cc: help for repeat.
	* xmalloc.cc, xmalloc.h: outline xstrdup; MEM_DEBUG it.
	* ArgV.cc, ArgV.h: fix memory leak. Allocate memory in chunks.
	* FileAccess.cc, FileAccess.h, Filter.cc, Filter.h, LocalAccess.cc:
	  don't include ArgV.h in header.
	* LsCache.h, LsCache.cc: don't dup memory in Find method.
	* FtpDirList.cc, FtpSplitList.cc, HttpDir.cc: use new LsCache::Find.
	* url.h: start implementing class url.

2000-02-11  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc: print rate using Speedometer::GetStr.

2000-02-09  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc, CopyJob.h: don't use putchar; print summary when Done().
	* pgetJob.cc: don't use putchar.
	* mgetJob.cc: don't print empty line.
